--- a/options.html
+++ b/options.html
@@ -7,9 +7,11 @@
   <body>
     blocked websites:
     <form>
-      <input type="text" id="blocked">
+      <textarea id="blocked" rows="20" cols="60">
+      </textarea>
+      <br>
       <button type="submit">save</button>
     </form>
-    <script src="options.js"></script>
+    <script src="./options.js"></script>
   </body>
 </html>
